--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-myconnection": "^1.0.4",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "https": "^1.0.0",
