--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "https": "^1.0.0",
     "mysql": "^2.13.0",
     "path": "^0.12.7",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "socket.io": "^2.0.1"
   },
   "main": "Server.js",
   "devDependencies": {
-    "babel-plugin-transform-react-jsx": "^6.24.1"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
